project3/mjParser.jj
//----------------------------------------------------------------------
// mjParser0.jj
//
// (For CS321 Fall 2014 - Will Hopper)
//----------------------------------------------------------------------
//
//
//options { DEBUG_PARSER=true; }  /* Show debugging info */

PARSER_BEGIN(mjParser)
import java.util.*;
import java.io.*;
import ast.*;

public class mjParser {
  public static void main(String [] args) {
    try {
      if (args.length == 1) {
        FileInputStream stream = new FileInputStream(args[0]);
        Ast.Program p = new mjParser(stream).Program();
        stream.close();
        System.out.print(p);
      } else {
        System.out.println("Need a file name as command-line argument.");
      }
    } catch (TokenMgrError e) {
      System.err.println(e);
    } catch (Exception e) {
      System.err.println(e);
    }
  }
}
PARSER_END(mjParser)

//
// LEXER SECTION ---------------------------------------------------------------
//

SKIP : /* White space */
{
  " " | "\t" | "\n" | "\r" | "\f"
}

SKIP : /* Comments -- multi-line form and error detection not included */
{
  <"//" (~["\n","\r"])* ("\n"|"\r"|"\r\n")>
| "/*" : MULTILINECOMMENT // Here we enter multiline comment state
}

// Allows us to catch unterminated comments
<MULTILINECOMMENT> MORE:
{
  <~[]>
}

// Rules for inside of multiline comment state
<MULTILINECOMMENT> SKIP :
{
  "*/" : DEFAULT // Back to the default state
}

TOKEN : /* Keywords */
{
  "class" | "extends" | "static" | "public" | "void" | "int" | "boolean"
| "new" | "this" | "if" | "else" | "while" | "return" | "main" | "String"
| "true" | "false" | "System" | "out" | "println" 
}

TOKEN : /* Internal tokens */
{
  <#DIGIT:  ["0"-"9"]>
| <#LETTER: (["A"-"Z"]|["a"-"z"])>
}

TOKEN : /* Integer literals */
{
  <INTLIT: (<DIGIT>)+>
    {
      /* Detect integer overflow */
      try {
        Integer.parseInt(matchedToken.image);
      } catch(NumberFormatException e) {
        throw new TokenMgrError("Lexical error: Integer overflow: line "
          + matchedToken.beginLine + ", column " + matchedToken.beginColumn
          + ", lexeme: " + matchedToken.image, 0); /* Detect integer overflow */
      }
    }
}

TOKEN : /* String literals  */
{
  <STRLIT: ("\"" (~["\"","\n"])* "\"")>
| <UNTERM_STRLIT: ("\"" (~["\"", "\n"])*)>
  { if (true) throw new TokenMgrError("Lexical error: Unterminated string: line "
        + matchedToken.beginLine + ", column " + matchedToken.beginColumn
        + ", lexeme: " + matchedToken.image, 0); } /* Detect unterm. strings */
}

TOKEN : /* Identifiers */
{
  <ID: <LETTER> (<LETTER>|<DIGIT>)*>
}

TOKEN : /* Operators and delimiters */
{
   "+" | "-" | "*" | "/" | "&&" | "||" | "!"
|  "==" | "!=" | "<" | "<=" | ">" | ">="
|  "=" | ";" | "," | "." | "(" | ")" | "[" | "]" | "{" | "}"
}

//
// PARSER SECTION ---------------------------------------------------------------
//

// Program -> {ClassDecl}
//
Ast.Program Program():
{ List<Ast.ClassDecl> cl = new ArrayList<Ast.ClassDecl>();
  Ast.ClassDecl c; }
{
  ( c=ClassDecl() {cl.add(c);} )* <EOF>
  { return new Ast.Program(cl); }
}

/*
 * ClassDecl -> "class" <ID> ["extends" <ID>] "{" {VarDecl} {MethodDecl} "}"
 * (String classname, String parentclass, list of VarDecls, list of MethodDecls)
*/
Ast.ClassDecl ClassDecl():
{ Token tkn;
  String cn;
  String pc="";
  List<Ast.VarDecl> vdl = new ArrayList<Ast.VarDecl>();
  List<Ast.MethodDecl> mdl = new ArrayList<Ast.MethodDecl>();
  Ast.VarDecl v;
  Ast.MethodDecl m; }
{
  "class" tkn=<ID> { cn=new String(tkn.image); } ["extends" tkn=<ID> {pc=new String(tkn.image);}] "{"
          ( v=VarDecl() {vdl.add(v);} )*
          ( m=MethodDecl() {mdl.add(m);} )* "}"

  { return new Ast.ClassDecl(cn, pc, vdl, mdl); }

}

/* Original:
 * MethodDecl -> "public" ExtType <ID> "(" [Param {"," Param}] ")"
 *                 "{" {VarDecl} {Stmt} "}"
 *            |  "public" "static" "void" "main" "(" "String" "[" "]" <ID> ")"
 *                 "{" {VarDecl} {Stmt} "}"
 * (Type returntype, String name, list of params, list of VarDecls, list of Stmts)
*/
Ast.MethodDecl MethodDecl():
{
  Token tkn;
  Ast.Type t;
  String nm;
  List<Ast.Param> plist = new ArrayList<Ast.Param>();
  Ast.Param p;
  List<Ast.VarDecl> vlist = new ArrayList<Ast.VarDecl>();
  Ast.VarDecl v;
  List<Ast.Stmt> slist = new ArrayList<Ast.Stmt>();
  Ast.Stmt s;
}
{
  LOOKAHEAD(2) "public" t=ExtType() tkn=<ID> {nm=new String(tkn.image);} "(" [p=Param() {plist.add(p);}]
        ("," p=Param() {plist.add(p);})* ")"
        "{" (LOOKAHEAD(2) v=VarDecl() {vlist.add(v);})* (s=Stmt() {slist.add(s);} )* "}"

        {return new Ast.MethodDecl(t, nm, plist, vlist, slist); }

| "public" "static" "void" "main" "(" "String" "[" "]" tkn=<ID> ")"
             "{" (LOOKAHEAD(2) v=VarDecl() {vlist.add(v);})* (s=Stmt() {slist.add(s);} )* "}"

        {
           // Manually create param for main method call
           Ast.Type tempType = new Ast.ObjType("String");
           Ast.Type paramType = new Ast.ArrayType(tempType);
           p = new Ast.Param(paramType, tkn.image);
           //plist.add(p);
           return new Ast.MethodDecl(null, "main", plist, vlist, slist);
        }
}

// Param -> Type <ID>
// (Type type, String name)
Ast.Param Param():
{
  Token tkn;
  Ast.Type t;
  String nm;
}
{
  t=Type() tkn=<ID> {nm=new String(tkn.image);}
  { return new Ast.Param(t, nm); }
}

// VarDecl -> Type <ID> ["=" InitExpr] ";"
// (Type type, String name, Exp initExpr (possibly null))
Ast.VarDecl VarDecl():
{
  Token tkn;
  Ast.Type t;
  Ast.Exp initExp=null;
  String nm;
}
{
  t=Type() tkn=<ID> {nm=new String(tkn.image);} ["=" initExp=InitExpr()] ";"
  { return new Ast.VarDecl(t, nm, initExp); }
}

// ExtType -> Type | "void"
//
Ast.Type ExtType(): {Ast.Type t;}
{
  t=Type() { return t; }
| "void"   { return null; }
}

// Type -> BasicType
//      |  BasicType "[" "]"
//      |  <ID>
//
Ast.Type Type(): {Ast.Type t; Token tkn;}
{
  LOOKAHEAD(2) t=BasicType()          { return t;                          }
| t=BasicType() "[" "]"               { return new Ast.ArrayType(t);       }
| tkn=<ID>                            { return new Ast.ObjType(tkn.image); }
}

// BasicType -> "int" | "boolean"
//
Ast.Type BasicType(): {}
{
  "int"     { return new Ast.IntType();  }
| "boolean" { return new Ast.BoolType(); }
}

// Stmt -> "{" {Stmt} "}"
//      |  ExtId "(" [Args] ")" ";"
//      |  Lvalue "=" InitExpr ";"
//      |  "if" "(" Expr ")" Stmt ["else" Stmt]
//      |  "while" "(" Expr ")" Stmt
//      |  "System" "." "out" "." "println" "(" [PrintArg] ")" ";"
//      |  "return" [Expr] ";"
//
Ast.Stmt Stmt():
{
  Ast.Type t;
  List<Ast.Param> plist = new ArrayList<Ast.Param>();
  Ast.Param p;
  List<Ast.VarDecl> vlist = new ArrayList<Ast.VarDecl>();
  Ast.VarDecl v;
  List<Ast.Stmt> slist = new ArrayList<Ast.Stmt>();
  Ast.Stmt s1;
  Ast.Stmt s2=null;
  Ast.Stmt s3;

  Ast.Exp e=null;
  Ast.Exp e1=null;
  Ast.Exp e2=null;
  Ast.Exp e3=null;
  List<Ast.Exp> elist = new ArrayList<Ast.Exp>();
  Ast.PrArg pr=null;
  String str = null;
}
{
  "{" (s1=Stmt() {slist.add(s1);})* "}" { return new Ast.Block(slist); }
| e=ExtId() ( ("(" [elist=Args()] ")" ";"
      {
        if(e instanceof Ast.Id) {
          e2 = new Ast.This();
          str = ((Ast.Id)e2).nm;
        } else if (e instanceof Ast.Field) {
          e2 = ((Ast.Field)e).obj;
          str = ((Ast.Field)e).nm;
        }

        s3 = new Ast.CallStmt(e2, str, elist);} )

| (["[" e1=Expr() "]"]
    { if (e1 != null) {
        e2 = new Ast.ArrayElm(e, e1);
      } else {
        e2 = e;
      }
    }
  "=" e3=InitExpr() ";")) { s3 = new Ast.Assign(e1, e2);} { return s3; }


| "if" "(" e=Expr() ")" s1=Stmt() ["else" s2=Stmt()] { return new Ast.If(e, s1, s2);}
| "while" "(" e=Expr() ")" s1=Stmt()                 { return new Ast.While(e, s1); }
| "System" "." "out" "." "println" "(" [ pr=PrintArg() ] ")" ";" { return new Ast.Print(pr); }
| "return" [e=Expr()] ";"                            { return new Ast.Return(e); }
}

// Args -> Expr {"," Expr}
//
List<Ast.Exp> Args():
{
  Ast.Exp e1;
  Ast.Exp e2;
  List<Ast.Exp> elist = new ArrayList<Ast.Exp>();
}
{
  e1=Expr() ("," e2=Expr() {elist.add(e2);})* { return elist; }
}

// PrintArg -> Expr | <STRLIT>
//
Ast.PrArg PrintArg():
{
  Token tkn;
  Ast.Exp e;
}
{
 e=Expr()       { return e; }
 | tkn=<STRLIT> { return new Ast.StrLit(tkn.image); }
}

// InitExpr -> "new" BasicType "[" <INTLIT> "]"
//          |  "new" <ID> "(" ")"
//          |  Expr
//
 Ast.Exp InitExpr():
{ Token tkn;
  Ast.Type t;
  Ast.Exp e;
}
{
  LOOKAHEAD(2) "new" t=BasicType() "[" tkn=<INTLIT> "]" { return new Ast.NewArray(t, Integer.parseInt(tkn.image)); }
| "new" tkn=<ID> "(" ")" { return new Ast.NewObj(tkn.image); }
| e=Expr()  { return e; }
}

/* Original:
 * Expr -> Expr BinOp Expr
 *      |  UnOp Expr
 *      |  "(" Expr ")"
 *      |  ExtId "(" [Args] ")"
 *      |  Lvalue
 *      |  Literal
*/
Ast.Exp Expr(): {Ast.Exp e;}
{
  e=A() { return e; }
}

Ast.Exp A(): {Ast.Exp e1, e2=null; Token tkn=null;}
{
  e1=B() ("||" e2=B())*
  {
    if(tkn != null) {
      return new Ast.Binop(Ast.BOP.OR, e1, e2);
    } else {
      return e1;
    }
  }
}

Ast.Exp B(): {Ast.Exp e1, e2=null; Token tkn=null;}
{
  e1=C() (tkn="&&" e2=C())*
  {
    if(tkn != null) {
      return new Ast.Binop(Ast.BOP.AND, e1, e2);
    } else {
      return e1;
    }
  }
}

Ast.Exp C(): {Ast.Exp e1, e2=null; Token tkn=null;}
{
  e1=D() ((tkn="=="|tkn="!=") e2=D())*
  {
    if(tkn != null) {
      if(tkn.image == "==") {
        return new Ast.Binop(Ast.BOP.EQ, e1, e2);
      } else if(tkn.image == "==") {
        return new Ast.Binop(Ast.BOP.NE, e1, e2);
      }
    } else {
      return e1;
    }
  }
}

Ast.Exp D(): {Ast.Exp e1, e2=null; Token tkn=null;}
{
  e1=E() ((tkn="<"|tkn="<="|tkn=">"|tkn=">=") e2=E())*
  {
    if(tkn != null) {
      if(tkn.image == "<") {
        return new Ast.Binop(Ast.BOP.LT, e1, e2);
      } else if(tkn.image == "<=") {
        return new Ast.Binop(Ast.BOP.LE, e1, e2);
      } else if(tkn.image == ">") {
        return new Ast.Binop(Ast.BOP.GT, e1, e2);
      } else if(tkn.image == ">=") {
        return new Ast.Binop(Ast.BOP.GE, e1, e2);
      }
    } else {
      return e1;
    }
  }
}

Ast.Exp E(): {Ast.Exp e1, e2=null; Token tkn=null;}
{
  e1=F() ((tkn="+"|tkn="-") F())*
  {
    if(tkn != null) {
      if(tkn.image == "+") {
        return new Ast.Binop(Ast.BOP.ADD, e1, e2);
      } else if(tkn.image == "-") {
        return new Ast.Binop(Ast.BOP.SUB, e1, e2);
      }
    } else {
      return e1;
    }
  }
}

Ast.Exp F(): {Ast.Exp e1, e2=null; Token tkn=null;}
{
  e1=G() ((tkn="*"|tkn="/") e2=G())*
  {
    if(tkn != null) {
      if(tkn.image == "*") {
        return new Ast.Binop(Ast.BOP.MUL, e1, e2);
      } else if(tkn.image == "/") {
        return new Ast.Binop(Ast.BOP.DIV, e1, e2);
      }
    } else {
      return e1;
    }
  }
}

Ast.Exp G(): {Ast.Exp e; Token tkn=null;}
{
  (tkn="-"|tkn="!")* e=H()
  {
    if(tkn != null) {
      if(tkn.image == "-") {
        return new Ast.Unop(Ast.UOP.NEG, e);
      } else if(tkn.image == "!") {
        return new Ast.Unop(Ast.UOP.NOT, e);
      }
    } else {
      return e;
    }
  }
}

Ast.Exp H():
{
  Token tkn;
  Ast.Exp e=null, e2=null, e3=null, eExpr=null;
  List<Ast.Exp> elist = new ArrayList<Ast.Exp>();
  boolean b;
  int i;
  String str = null;
}
{

 "(" e=Expr() ")" { return e; }
| i=IntLit()       { return new Ast.IntLit(i);  }
| b=BoolLit()      { return new Ast.BoolLit(b); }
| LOOKAHEAD(2) tkn=<ID>         { return new Ast.Id(tkn.image); }
| LOOKAHEAD(2) e2=ExtId() [("(" [elist=Args()] ")" | "[" e3=Expr() "]" )]
      {
        if(e2 instanceof Ast.Id) {
          e2 = new Ast.This();
          str = ((Ast.Id)e2).nm;
        } else if (e instanceof Ast.Field) {
          e2 = ((Ast.Field)e).obj;
          str = ((Ast.Field)e).nm;
        }
        return new Ast.Call(e2, str, elist);
      }
}

// ExtId -> ["this" "."] <ID> {"." <ID>}
//
Ast.Exp ExtId():
{
  Token tkn;
  Ast.Exp e1 = null;
  Ast.Exp e2 = null;
}
{
  ["this" {e1=new Ast.This();} "."] tkn=<ID>
        {
          if (e1 == null) {
            e2 = new Ast.Id(tkn.image);
          } else {
            e2 = new Ast.Field(e1, tkn.image);
          }
        }

  ("." tkn=<ID> { e1 = new Ast.Field(e2, tkn.image); })*
  {return e1;}
}

int IntLit(): {Token tkn;}
{
  tkn=<INTLIT> { return Integer.parseInt(tkn.image); }
}

boolean BoolLit(): {Token tkn;}
{
  tkn="true"   { return true; }
| tkn="false"  { return false; }
}
