project3/mjParser.java
/* Generated By:JavaCC: Do not edit this line. mjParser.java */
import java.util.*;
import java.io.*;
import ast.*;

public class mjParser implements mjParserConstants {
  public static void main(String [] args) {
    try {
      if (args.length == 1) {
        FileInputStream stream = new FileInputStream(args[0]);
        Ast.Program p = new mjParser(stream).Program();
        stream.close();
        System.out.print(p);
      } else {
        System.out.println("Need a file name as command-line argument.");
      }
    } catch (TokenMgrError e) {
      System.err.println(e);
    } catch (Exception e) {
      System.err.println(e);
    }
  }

//
// PARSER SECTION ---------------------------------------------------------------
//

// Program -> {ClassDecl}
//
  static final public Ast.Program Program() throws ParseException {
  List<Ast.ClassDecl> cl = new ArrayList<Ast.ClassDecl>();
  Ast.ClassDecl c;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 10:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      c = ClassDecl();
                   cl.add(c);
    }
    jj_consume_token(0);
    {if (true) return new Ast.Program(cl);}
    throw new Error("Missing return statement in function");
  }

/*
 * ClassDecl -> "class" <ID> ["extends" <ID>] "{" {VarDecl} {MethodDecl} "}"
 * (String classname, String parentclass, list of VarDecls, list of MethodDecls)
*/
  static final public Ast.ClassDecl ClassDecl() throws ParseException {
  Token tkn;
  String cn;
  String pc="";
  List<Ast.VarDecl> vdl = new ArrayList<Ast.VarDecl>();
  List<Ast.MethodDecl> mdl = new ArrayList<Ast.MethodDecl>();
  Ast.VarDecl v;
  Ast.MethodDecl m;
    jj_consume_token(10);
    tkn = jj_consume_token(ID);
                     cn=new String(tkn.image);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 11:
      jj_consume_token(11);
      tkn = jj_consume_token(ID);
                                                                      pc=new String(tkn.image);
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    jj_consume_token(57);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 15:
      case 16:
      case ID:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      v = VarDecl();
                         vdl.add(v);
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 13:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      m = MethodDecl();
                            mdl.add(m);
    }
    jj_consume_token(58);
    {if (true) return new Ast.ClassDecl(cn, pc, vdl, mdl);}
    throw new Error("Missing return statement in function");
  }

/* Original:
 * MethodDecl -> "public" ExtType <ID> "(" [Param {"," Param}] ")"
 *                 "{" {VarDecl} {Stmt} "}"
 *            |  "public" "static" "void" "main" "(" "String" "[" "]" <ID> ")"
 *                 "{" {VarDecl} {Stmt} "}"
 * (Type returntype, String name, list of params, list of VarDecls, list of Stmts)
*/
  static final public Ast.MethodDecl MethodDecl() throws ParseException {
  Token tkn;
  Ast.Type t;
  String nm;
  List<Ast.Param> plist = new ArrayList<Ast.Param>();
  Ast.Param p;
  List<Ast.VarDecl> vlist = new ArrayList<Ast.VarDecl>();
  Ast.VarDecl v;
  List<Ast.Stmt> slist = new ArrayList<Ast.Stmt>();
  Ast.Stmt s;
    if (jj_2_3(2)) {
      jj_consume_token(13);
      t = ExtType();
      tkn = jj_consume_token(ID);
                                              nm=new String(tkn.image);
      jj_consume_token(53);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 15:
      case 16:
      case ID:
        p = Param();
                                                                                         plist.add(p);
        break;
      default:
        jj_la1[4] = jj_gen;
        ;
      }
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 51:
          ;
          break;
        default:
          jj_la1[5] = jj_gen;
          break label_4;
        }
        jj_consume_token(51);
        p = Param();
                        plist.add(p);
      }
      jj_consume_token(54);
      jj_consume_token(57);
      label_5:
      while (true) {
        if (jj_2_1(2)) {
          ;
        } else {
          break label_5;
        }
        v = VarDecl();
                                       vlist.add(v);
      }
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 18:
        case 19:
        case 21:
        case 22:
        case 27:
        case ID:
        case 57:
          ;
          break;
        default:
          jj_la1[6] = jj_gen;
          break label_6;
        }
        s = Stmt();
                                                                   slist.add(s);
      }
      jj_consume_token(58);
         {if (true) return new Ast.MethodDecl(t, nm, plist, vlist, slist);}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 13:
        jj_consume_token(13);
        jj_consume_token(12);
        jj_consume_token(14);
        jj_consume_token(23);
        jj_consume_token(53);
        jj_consume_token(24);
        jj_consume_token(55);
        jj_consume_token(56);
        tkn = jj_consume_token(ID);
        jj_consume_token(54);
        jj_consume_token(57);
        label_7:
        while (true) {
          if (jj_2_2(2)) {
            ;
          } else {
            break label_7;
          }
          v = VarDecl();
                                            vlist.add(v);
        }
        label_8:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 18:
          case 19:
          case 21:
          case 22:
          case 27:
          case ID:
          case 57:
            ;
            break;
          default:
            jj_la1[7] = jj_gen;
            break label_8;
          }
          s = Stmt();
                                                                        slist.add(s);
        }
        jj_consume_token(58);
           // Manually create param for main method call
           Ast.Type tempType = new Ast.ObjType("String");
           Ast.Type paramType = new Ast.ArrayType(tempType);
           p = new Ast.Param(paramType, tkn.image);
           //plist.add(p);
           {if (true) return new Ast.MethodDecl(null, "main", plist, vlist, slist);}
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

// Param -> Type <ID>
// (Type type, String name)
  static final public Ast.Param Param() throws ParseException {
  Token tkn;
  Ast.Type t;
  String nm;
    t = Type();
    tkn = jj_consume_token(ID);
                     nm=new String(tkn.image);
    {if (true) return new Ast.Param(t, nm);}
    throw new Error("Missing return statement in function");
  }

// VarDecl -> Type <ID> ["=" InitExpr] ";"
// (Type type, String name, Exp initExpr (possibly null))
  static final public Ast.VarDecl VarDecl() throws ParseException {
  Token tkn;
  Ast.Type t;
  Ast.Exp initExp=null;
  String nm;
    t = Type();
    tkn = jj_consume_token(ID);
                     nm=new String(tkn.image);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 49:
      jj_consume_token(49);
      initExp = InitExpr();
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    jj_consume_token(50);
    {if (true) return new Ast.VarDecl(t, nm, initExp);}
    throw new Error("Missing return statement in function");
  }

// ExtType -> Type | "void"
//
  static final public Ast.Type ExtType() throws ParseException {
                     Ast.Type t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 15:
    case 16:
    case ID:
      t = Type();
             {if (true) return t;}
      break;
    case 14:
      jj_consume_token(14);
             {if (true) return null;}
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

// Type -> BasicType
//      |  BasicType "[" "]"
//      |  <ID>
//
  static final public Ast.Type Type() throws ParseException {
                  Ast.Type t; Token tkn;
    if (jj_2_4(2)) {
      t = BasicType();
                                        {if (true) return t;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 15:
      case 16:
        t = BasicType();
        jj_consume_token(55);
        jj_consume_token(56);
                                        {if (true) return new Ast.ArrayType(t);}
        break;
      case ID:
        tkn = jj_consume_token(ID);
                                        {if (true) return new Ast.ObjType(tkn.image);}
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

// BasicType -> "int" | "boolean"
//
  static final public Ast.Type BasicType() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 15:
      jj_consume_token(15);
              {if (true) return new Ast.IntType();}
      break;
    case 16:
      jj_consume_token(16);
              {if (true) return new Ast.BoolType();}
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

// Stmt -> "{" {Stmt} "}"
//      |  ExtId "(" [Args] ")" ";"
//      |  Lvalue "=" InitExpr ";"
//      |  "if" "(" Expr ")" Stmt ["else" Stmt]
//      |  "while" "(" Expr ")" Stmt
//      |  "System" "." "out" "." "println" "(" [PrintArg] ")" ";"
//      |  "return" [Expr] ";"
//
  static final public Ast.Stmt Stmt() throws ParseException {
  Ast.Type t;
  List<Ast.Param> plist = new ArrayList<Ast.Param>();
  Ast.Param p;
  List<Ast.VarDecl> vlist = new ArrayList<Ast.VarDecl>();
  Ast.VarDecl v;
  List<Ast.Stmt> slist = new ArrayList<Ast.Stmt>();
  Ast.Stmt s1;
  Ast.Stmt s2=null;
  Ast.Exp e=null;
  Ast.PrArg pr=null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 57:
      jj_consume_token(57);
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 18:
        case 19:
        case 21:
        case 22:
        case 27:
        case ID:
        case 57:
          ;
          break;
        default:
          jj_la1[13] = jj_gen;
          break label_9;
        }
        s1 = Stmt();
                  slist.add(s1);
      }
      jj_consume_token(58);
                                           {if (true) return new Ast.Block(slist);}
      break;
    case 18:
    case ID:
      ExtId();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 53:
        jj_consume_token(53);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 18:
        case 25:
        case 26:
        case INTLIT:
        case ID:
        case 37:
        case 42:
        case 53:
          Args();
          break;
        default:
          jj_la1[14] = jj_gen;
          ;
        }
        jj_consume_token(54);
        jj_consume_token(50);
        break;
      case 49:
      case 55:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 55:
          jj_consume_token(55);
          Expr();
          jj_consume_token(56);
          break;
        default:
          jj_la1[15] = jj_gen;
          ;
        }
        jj_consume_token(49);
        InitExpr();
        jj_consume_token(50);
        break;
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    case 19:
      jj_consume_token(19);
      jj_consume_token(53);
      e = Expr();
      jj_consume_token(54);
      s1 = Stmt();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 20:
        jj_consume_token(20);
        s2 = Stmt();
        break;
      default:
        jj_la1[17] = jj_gen;
        ;
      }
                                                       {if (true) return new Ast.If(e, s1, s2);}
      break;
    case 21:
      jj_consume_token(21);
      jj_consume_token(53);
      e = Expr();
      jj_consume_token(54);
      s1 = Stmt();
                                       {if (true) return new Ast.While(e, s1);}
      break;
    case 27:
      jj_consume_token(27);
      jj_consume_token(52);
      jj_consume_token(28);
      jj_consume_token(52);
      jj_consume_token(29);
      jj_consume_token(53);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 18:
      case 25:
      case 26:
      case INTLIT:
      case STRLIT:
      case ID:
      case 37:
      case 42:
      case 53:
        pr = PrintArg();
        break;
      default:
        jj_la1[18] = jj_gen;
        ;
      }
      jj_consume_token(54);
      jj_consume_token(50);
                                                                   {if (true) return new Ast.Print(pr);}
      break;
    case 22:
      jj_consume_token(22);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 18:
      case 25:
      case 26:
      case INTLIT:
      case ID:
      case 37:
      case 42:
      case 53:
        e = Expr();
        break;
      default:
        jj_la1[19] = jj_gen;
        ;
      }
      jj_consume_token(50);
                             {if (true) return new Ast.Return(e);}
      break;
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

// Args -> Expr {"," Expr}
//
  static final public void Args() throws ParseException {
    Expr();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 51:
        ;
        break;
      default:
        jj_la1[21] = jj_gen;
        break label_10;
      }
      jj_consume_token(51);
      Expr();
    }
  }

// PrintArg -> Expr | <STRLIT>
//
  static final public Ast.PrArg PrintArg() throws ParseException {
  Token tkn;
  Ast.Exp e;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 18:
    case 25:
    case 26:
    case INTLIT:
    case ID:
    case 37:
    case 42:
    case 53:
      e = Expr();
                {if (true) return e;}
      break;
    case STRLIT:
      tkn = jj_consume_token(STRLIT);
                  {if (true) return new Ast.StrLit(tkn.image);}
      break;
    default:
      jj_la1[22] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

// InitExpr -> "new" BasicType "[" <INTLIT> "]"
//          |  "new" <ID> "(" ")"
//          |  Expr
//
  static final public Ast.Exp InitExpr() throws ParseException {
  Token tkn;
  Ast.Type t;
  Ast.Exp e;
    if (jj_2_5(2)) {
      jj_consume_token(17);
      t = BasicType();
      jj_consume_token(55);
      tkn = jj_consume_token(INTLIT);
      jj_consume_token(56);
                                                          {if (true) return new Ast.NewArray(t, Integer.parseInt(tkn.image));}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 17:
        jj_consume_token(17);
        tkn = jj_consume_token(ID);
        jj_consume_token(53);
        jj_consume_token(54);
                           {if (true) return new Ast.NewObj(tkn.image);}
        break;
      case 18:
      case 25:
      case 26:
      case INTLIT:
      case ID:
      case 37:
      case 42:
      case 53:
        e = Expr();
              {if (true) return e;}
        break;
      default:
        jj_la1[23] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

/* Original:
 * Expr -> Expr BinOp Expr
 *      |  UnOp Expr
 *      |  "(" Expr ")"
 *      |  ExtId "(" [Args] ")"
 *      |  Lvalue
 *      |  Literal
*/
  static final public Ast.Exp Expr() throws ParseException {
                 Ast.Exp e;
    e = A();
          {if (true) return e;}
    throw new Error("Missing return statement in function");
  }

  static final public Ast.Exp A() throws ParseException {
              Ast.Exp e1, e2=null; Token tkn=null;
    e1 = B();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 41:
        ;
        break;
      default:
        jj_la1[24] = jj_gen;
        break label_11;
      }
      jj_consume_token(41);
      e2 = B();
    }
    if(tkn != null) {
      {if (true) return new Ast.Binop(Ast.BOP.OR, e1, e2);}
    } else {
      {if (true) return e1;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public Ast.Exp B() throws ParseException {
              Ast.Exp e1, e2=null; Token tkn=null;
    e1 = C();
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 40:
        ;
        break;
      default:
        jj_la1[25] = jj_gen;
        break label_12;
      }
      tkn = jj_consume_token(40);
      e2 = C();
    }
    if(tkn != null) {
      {if (true) return new Ast.Binop(Ast.BOP.AND, e1, e2);}
    } else {
      {if (true) return e1;}
    }
    throw new Error("Missing return statement in function");
  }
